# cmake-example

./: CMakeLists.txt  cmini.c  version.h.in
kernel/: CMakeLists.txt
kernel/src/: pagan_startup.c
lib/pagan/: CMakeLists.txt
